/**
 * Copyright 2020 DreamWorks Animation L.L.C.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

import "scalapb/scalapb.proto";


option (scalapb.options) = {
  package_name: "ai.forestflow.domain"
  flat_package: true
  single_file: true
//  preamble: "sealed trait BaseMessage"
//  preamble: "sealed trait CommonMessage"
};

enum LogLevel {
    NONE = 1;
    FULL = 2;
    SAMPLE = 3;
}

message LoggingSettings {
    /**
      * Defines how the server logs request/response pairs.
      * This is typically used to enable performance-based expiry and validity of servables
      */
    required LogLevel logLevel = 1 [default = NONE];


    /**
      * If logging is used, then a list of features that identify the key for an event
      * must be provided. This is the only way we will know how to log a serve result and allow performance servers to
      * associate predicted data with actuals
      */
    repeated string keyFeatures = 2 [(scalapb.field).collection_type="collection.immutable.List"];
    optional string keyFeaturesSeparator = 3 [default = "."];

}
